# NovaPhy

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  claude.md  environment.yml  pyproject.toml  vcpkg.json
.agents/skills/run-tests/: SKILL.md
.claude/agents/: testing-qa.md
cmake/: install_dependence.cmake  utils.cmake
compat/: compat.cmake
demos/: demo_100_robots.py  demo_basic_urdf.py  demo_dominoes.py  demo_fluid_coupling.py  demo_friction_ramp.py  demo_ik_arm.py  demo_ipc_stack.py  demo_newtons_cradle.py  demo_pyramid.py  demo_robot_sim_pipeline.py  demo_sensors.py  demo_wall_break.py
demos/ik_arm_demo/: __init__.py  benchmark.py  cli_args.py  config.py  ik_logic.py  runtime.py  scene_setup.py
demos/multibody_demo/: demo_100_robots_multibody.py  demo_motor_arm.py  demo_newtons_cradle_pendulum.py  demo_pyramid_ball_multibody.py  demo_rope.py  demo_seesaw.py  demo_wrecking_ball.py
ik/: __init__.py  ik_solver.py
include/novaphy/: novaphy.h  novaphy_config.h.in
include/novaphy/collision/: broadphase.h  broadphase_all_pairs.h  ibroadphase.h  narrowphase.h
include/novaphy/core/: aabb.h  articulation.h  body.h  contact.h  control.h  device.h  joint.h  model.h  model_builder.h  shape.h  site.h
include/novaphy/dynamics/: featherstone.h  free_body_solver.h  solver_base.h  solver_sequential_impulse.h  xpbd_solver.h
include/novaphy/fluid/: boundary.h  particle_state.h  pbf_solver.h
include/novaphy/io/: openusd_importer.h  scene_builder.h  scene_types.h  simulation_exporter.h  urdf_parser.h
include/novaphy/ipc/: shape_converter.h
include/novaphy/multibody/: free_rigid_body.h  multibody.h  multibody_constraint.h  multibody_solver.h
include/novaphy/sim/: articulated_world.h  state.h  world.h
python/bindings/: CMakeLists.txt  bind_collision.cpp  bind_core.cpp  bind_dynamics.cpp  bind_fluid.cpp  bind_io.cpp  bind_main.cpp  bind_sim.cpp
python/novaphy/: __init__.py  _compat.py  sensors.py  viz.py
scripts/: config_linux.py
src/: CMakeLists.txt  stub.cpp
src/collision/: broadphase.cpp  narrowphase.cpp
src/core/: body.cpp  model_builder.cpp  shape.cpp
src/dynamics/: featherstone.cpp  free_body_solver.cpp  solver_sequential_impulse.cpp  xpbd_solver.cpp
src/fluid/: boundary.cpp  particle_state.cpp  pbf_solver.cpp
src/io/: openusd_importer.cpp  scene_builder.cpp  simulation_exporter.cpp  urdf_parser.cpp
src/ipc/: CMakeLists.txt  ipc_world.cpp  shape_converter.cpp
src/multibody/: free_rigid_body.cpp  multibody.cpp  multibody_constraint.cpp  multibody_solver.cpp
src/sim/: articulated_world.cpp  state.cpp  world.cpp
src/vbd/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cmake_project/add_subdirectory/: CMakeLists.txt  vcpkg.json
tests/cmake_project/find_package/: CMakeLists.txt
tests/python/: benchmark_rigid_1000.py  test_articulated_collision_filter.py  test_articulated_world.py  test_collision.py  test_coupling.py  test_cylinders.py  test_demo_basic_urdf.py  test_demo_performance_monitor.py  test_fluid.py  test_fluid_step7.py  test_free_body_sim.py  test_ik_demo.py  test_io_pipeline.py  test_multibody.py  test_newton_basic_urdf_audit.py  test_pbf.py  test_performance_monitor.py  test_sensors.py  test_sites.py  test_urdf_import_metadata.py  test_xpbd_contacts.py  test_xpbd_solver.py
